# opensim-workbench-tauri

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  USER_GUIDE.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
app/src/components/viewer/: BodyMesh.tsx  ChipPackageViewer.css  ChipPackageViewer.tsx  DEViewer.css  DEViewer.tsx  DeformationViewer.css  DeformationViewer.tsx  GeometryViewer.css  GeometryViewer.tsx  MeshViewer.css  MeshViewer.tsx  MeshViewerToolbar.tsx  MeshWireframe.tsx  PrimitiveDialog.css  PrimitiveDialog.tsx  ResultSurface.tsx  ResultViewer.css  ResultViewer.tsx  TestBedConfig.css  TestBedConfig.tsx  ViewerToolbar.css  ViewerToolbar.tsx
app/src/components/workbench/: ChatPanel.css  ChatPanel.tsx  CompareView.css  CompareView.tsx  HistoryPanel.css  HistoryPanel.tsx  MaterialManager.css  MaterialManager.tsx  MessagesPanel.css  MessagesPanel.tsx  PluginManager.css  PluginManager.tsx  PropertiesPanel.css  PropertiesPanel.tsx  ReportView.css  ReportView.tsx  ScenarioManager.css  ScenarioManager.tsx  SchematicCanvas.css  SchematicCanvas.tsx  SettingsModal.css  SettingsModal.tsx  SystemCard.css  SystemCard.tsx  TestLibraryBrowser.css  TestLibraryBrowser.tsx  TestSuiteRunner.css  TestSuiteRunner.tsx  Toast.css  Toast.tsx  Toolbar.css  Toolbar.tsx  Toolbox.css  Toolbox.tsx  Workbench.css  Workbench.tsx
app/src/data/: chipTestLibrary.ts  deformationScenarios.ts  sampleScenarios.ts
app/src/stores/: chatStore.ts  projectStore.ts  simulationStore.ts
app/src/styles/: global.css
app/src/types/: project.ts  simulation.ts
app/src/utils/: agentTools.ts  chipCalculations.ts  csvExporter.ts  llmProviders.ts  reportGenerator.ts  speechSynthesis.ts
crates/app-engine/: Cargo.toml
crates/app-engine/src/: dto.rs  engine.rs  lib.rs  plugins.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core-geometry/: Cargo.toml
crates/core-geometry/src/: import.rs  lib.rs  primitives.rs  tessellate.rs  topology.rs
crates/core-hpc/: Cargo.toml
crates/core-hpc/src/: lib.rs
crates/core-materials/: Cargo.toml
crates/core-materials/src/: lib.rs
crates/core-mesh/: Cargo.toml
crates/core-mesh/src/: lib.rs  mesher.rs  quality.rs
crates/core-multiphysics/: Cargo.toml
crates/core-multiphysics/src/: coupling.rs  lib.rs  thermo_mechanical.rs
crates/core-parametric/: Cargo.toml
crates/core-parametric/src/: doe.rs  lib.rs  optimizer.rs  response_surface.rs  six_sigma.rs
crates/core-post/: Cargo.toml
crates/core-post/src/: lib.rs
crates/core-project/: Cargo.toml
crates/core-project/src/: graph.rs  lib.rs  model.rs  persistence.rs
crates/core-scripting/: Cargo.toml
crates/core-scripting/src/: lib.rs
crates/physics-cfd/: Cargo.toml
crates/physics-cfd/src/: lib.rs  solver.rs  tet4_cfd.rs
crates/physics-em/: Cargo.toml
crates/physics-em/src/: lib.rs  solver.rs  tet4_em.rs
crates/physics-structural/: Cargo.toml
crates/physics-structural/src/: lib.rs  solver.rs  tet4.rs
crates/physics-thermal/: Cargo.toml
crates/physics-thermal/src/: lib.rs  solver.rs  tet4_thermal.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
