[package]
name = "opensim-workbench"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
app-engine = { path = "../crates/app-engine" }
core-project = { path = "../crates/core-project" }

[lib]
name = "opensim_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
