[package]
name = "opensim-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opensim"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
app-engine = { path = "../app-engine" }
clap = { version = "4", features = ["derive"] }
