[package]
name = "core-parametric"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
nalgebra = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
