[package]
name = "physics-em"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
core-mesh = { path = "../core-mesh" }
core-materials = { path = "../core-materials" }
core-post = { path = "../core-post" }
tracing = { workspace = true }
